# DuckybotROS2

camera_driver/: package.xml  setup.py
camera_driver/calibration/: ost.txt  ost.yaml
camera_driver/camera_driver/: camera.py  camera_node.py
deliberation/: package.xml  setup.py
deliberation/config/calibration/: ost.txt  ost.yaml
deliberation/deliberation/: base_link_broadcaster.py  chassis_broadcaster.py  robot_state_publisher.py  static_base_link_broadcaster.py
deliberation/launch/: camera.launch.py
deliberation/urdf/: duckiebot.xacro
encoder_driver/: package.xml  setup.cfg  setup.py
encoder_driver/encoder_driver/: encoder.py  encoder_node.py
hat_driver/: package.xml  setup.cfg  setup.py
hat_driver/hat_driver/: hat.py  hat_node.py
interfaces/: CMakeLists.txt  package.xml
interfaces/msg/: Throttle.msg
motor_driver/: package.xml  setup.py
motor_driver/motor_driver/: motor.py  motor_node.py
shared_utils/: package.xml  setup.py
shared_utils/shared_utils/: Adafruit_I2C.py  Adafruit_PWM_Servo_Driver.py  constants.py  utils.py
test_pkg/: setup.py
test_pkg/test_pkg/: motor_test_node.py
urdf_tutorial_r2d2/: package.xml  setup.py
urdf_tutorial_r2d2/launch/: demo.launch.py
